LPS-46809 - Fix previous level button alignment in taglib header

--- a/portal-web/docroot/html/css/taglib/header.css
+++ b/portal-web/docroot/html/css/taglib/header.css
@@ -8,12 +8,12 @@
 		@include ellipsis;
 
 		margin: 0.1em;
+		padding-bottom: 5px;
 	}
 
 	.header-back-to a {
 		float: left;
-		padding: 0.5em;
-		padding-left: 0;
+		padding: 0 0.5em 0 0;
 	}
 }
 
